made it fullscreen

--- a/HTH2015/app/src/main/AndroidManifest.xml
+++ b/HTH2015/app/src/main/AndroidManifest.xml
@@ -18,9 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity android:name=".WebApp">
+
         </activity>
-        <activity android:name=".NumbersList">
+
+        <activity android:name=".UsefulNumbers">
 
         </activity>
     </application>
