--- a/HTH2015/app/src/main/AndroidManifest.xml
+++ b/HTH2015/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="kimjong.un.hth2015" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
