--- a/HTH2015/app/src/main/AndroidManifest.xml
+++ b/HTH2015/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         </activity>
 
         <activity android:name=".UsefulNumbers">
+            <intent-filter>
+                <action android:name="android.intent.action.CALL"/>
+            </intent-filter>
 
         </activity>
     </application>
