Revert "still broken"
This reverts commit e9bdff108cf82916f25bcec2a32a3b58fff4db74.

--- a/HTH2015/app/src/main/AndroidManifest.xml
+++ b/HTH2015/app/src/main/AndroidManifest.xml
@@ -28,8 +28,7 @@
 
         <activity android:name=".UsefulNumbers">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                    <category android:name="android.intent.action.CALL"/>
+                <action android:name="android.intent.action.CALL"/>
             </intent-filter>
 
         </activity>
